--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,2 +1,2 @@
-@include font("Comfortaa", "Comfortaa-Bold", "400", "normal");
-@include font("Comfortaa", "Comfortaa-Bold", "400", "normal");
+@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
