--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,14 @@ h6 {
   font-weight: 400;
 }
 
+.app-touch-main {
+  z-index: 1;
+}
+
+.app-touch-form {
+  z-index: 100;
+}
+
 html,
 body {
   overflow: hidden;
@@ -157,12 +165,18 @@ body {
 }
 
 .app-touch-main__scroll {
-  padding: 1rem 0;
   position: relative;
   width: 100%;
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.app-touch-main__section_screen {
+  width: 100%;
+  height: 46vh;
+  padding: 0 1rem;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -170,10 +184,41 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  z-index: 1;
 }
 
 .app-touch-main__section_goods {
-  padding: 0 1rem;
+  width: 100%;
+  padding: 1rem;
+}
+
+.app-touch-main__parallax {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 70%;
+  width: 100%;
+  background-image: url("https://images.unsplash.com/photo-1504114133367-631ecd3db3ca?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1944&q=80");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+}
+
+.app-touch-main__look {
+  width: 100%;
+  height: 10rem;
+  background-color: #FAF5F1;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0 .05rem .1rem #ccc;
+  box-shadow: 0 .05rem .1rem #ccc;
+  z-index: 3;
+  overflow: hidden;
+  padding: 2rem;
 }
 
 .app-touch-main .goods__see-all {
@@ -261,11 +306,64 @@ body {
   bottom: 1rem;
   z-index: 3;
   color: #fff;
+  font-family: 'Inter', serif;
 }
 
 .app-touch-main .goods__scroll .good__name {
   font-size: 1rem;
   line-height: 1.4;
   padding: 1rem;
-  font-family: 'Spectral', serif;
+  font-family: 'Inter', serif;
+}
+
+.app-touch-form {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  overflow: hidden;
+  background-color: transparent;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all .3s ease 0s;
+  -o-transition: all .3s ease 0s;
+  transition: all .3s ease 0s;
+}
+
+.app-touch-form__wrap {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.app-touch-form__wrap-form {
+  width: 100%;
+  height: 77vh;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 77vh;
+  flex: 0 0 77vh;
+  background-color: #fff;
+  border-top-right-radius: 3rem;
+  border-top-left-radius: 3rem;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  -webkit-transition: -webkit-transform .3s ease 0s;
+  transition: -webkit-transform .3s ease 0s;
+  -o-transition: transform .3s ease 0s;
+  transition: transform .3s ease 0s;
+  transition: transform .3s ease 0s, -webkit-transform .3s ease 0s;
 }
