--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -8,21 +8,58 @@
     overflow: hidden;
 
     &__scroll {
-        padding: 1rem 0;
         position: relative;
         width: 100%;
         height: 100%;
         overflow-y: auto;
         overflow-x: hidden;
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
     }
 
     &__section {
 
-        &_goods {
+        &_screen {
+            width: 100%;
+            height: 46vh;
             padding: 0 1rem;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            z-index: 1;
         }
+
+        &_goods {
+            width: 100%;
+            padding: 1rem;
+        }
+    }
+
+    &__parallax {
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        height: 70%;
+        width: 100%;
+        background-image: url('https://images.unsplash.com/photo-1504114133367-631ecd3db3ca?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1944&q=80');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        // background-attachment: fixed;
+        z-index: 2;
+    }
+
+    &__look {
+        width: 100%;
+        height: 10rem;
+        background-color: #FAF5F1;
+        border-radius: 1rem;
+        box-shadow: 0 .05rem .1rem #ccc;
+        z-index: 3;
+        overflow: hidden;
+        padding: 2rem;
     }
 
     &__goods {}
@@ -101,13 +138,14 @@
                     bottom: 1rem;
                     z-index: 3;
                     color: #fff;
+                    font-family: 'Inter', serif;
                 }
 
                 &__name {
                     font-size: 1rem;
                     line-height: 1.4;
                     padding: 1rem;
-                    font-family: 'Spectral', serif;
+                    font-family: 'Inter', serif;
                 }
             }
         }
