--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,27 @@ h6 {
 }
 
 .app-touch-form {
-  z-index: 100;
+  z-index: 1000;
+}
+
+.app-touch-form__close {
+  z-index: 1001;
+}
+
+.app-touch-form__wrap-form {
+  z-index: 1002;
+}
+
+.app-touch-form .form {
+  z-index: 1003;
+}
+
+.app-touch-form .form__name {
+  z-index: 1004;
+}
+
+.app-touch-form .form__title {
+  z-index: 1005;
 }
 
 html,
@@ -120,6 +140,10 @@ body {
   -ms-flex: 0 0 1rem;
   flex: 0 0 1rem;
   min-height: .1rem;
+}
+
+.app .cursor-none {
+  cursor: none;
 }
 
 .app-touch {
@@ -260,6 +284,8 @@ body {
   box-shadow: 0 .05rem .1rem #ccc;
   overflow: hidden;
   border-radius: 1rem;
+  position: relative;
+  z-index: 10;
 }
 
 .app-touch-main .goods__scroll .good:last-of-type {
@@ -333,31 +359,34 @@ body {
   transition: all .3s ease 0s;
 }
 
-.app-touch-form__wrap {
+.app-touch-form__close {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+}
+
+.app-touch-form__swipe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2rem;
 }
 
 .app-touch-form__wrap-form {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
   height: 77vh;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 77vh;
-  flex: 0 0 77vh;
+  padding: 2rem;
   background-color: #fff;
-  border-top-right-radius: 3rem;
-  border-top-left-radius: 3rem;
+  border-top-right-radius: 2rem;
+  border-top-left-radius: 2rem;
+  overflow: hidden;
   -webkit-transform: translateY(100%);
   -ms-transform: translateY(100%);
   transform: translateY(100%);
@@ -366,4 +395,104 @@ body {
   -o-transition: transform .3s ease 0s;
   transition: transform .3s ease 0s;
   transition: transform .3s ease 0s, -webkit-transform .3s ease 0s;
+}
+
+.app-touch-form .form {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+  grid-template-columns: 1fr;
+  -ms-grid-rows: 3rem 1fr 3rem;
+  grid-template-rows: 3rem 1fr 3rem;
+}
+
+.app-touch-form .form__name {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+}
+
+.app-touch-form .form__title {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
+  background-color: #fff;
+}
+
+.app-touch-form .form__title h2 {
+  font-size: 1.1rem;
+}
+
+.app-touch-form .form__ingredients {
+  width: 100%;
+  height: 100%;
+  padding: .5rem 0 2rem 0;
+}
+
+.app-touch-form .form__ingredient-el {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: .5rem 0;
+}
+
+.app-touch-form .form__ingredient-chec {
+  width: 1.4rem;
+  height: 1.4rem;
+  border: .05rem solid #ccc;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-right: .5rem;
+  -webkit-transition: all .2s ease 0s;
+  -o-transition: all .2s ease 0s;
+  transition: all .2s ease 0s;
+}
+
+.app-touch-form .form__ingredient-chec.active {
+  border: .4rem solid #fff;
+  background-color: #000;
+}
+
+.app-touch-form .form__btn {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.app-touch-form .form__btn-submit {
+  width: auto;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  height: 100%;
+  padding: 0 2rem;
+  border-radius: 5rem;
+  color: #000;
+  border: 1px solid #000;
+  background-color: #fff;
 }
