--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -11,24 +11,116 @@
     visibility: hidden;
     transition: all .3s ease 0s;
 
-    &__wrap {
+    &__close {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, .5);
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
+    }
+
+    &__swipe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 2rem;
     }
 
     &__wrap-form {
+        position: absolute;
+        bottom: 0;
+        left: 0;
         width: 100%;
         height: 77vh;
-        flex: 0 0 77vh;
+        padding: 2rem;
         background-color: #fff;
-        border-top-right-radius: 3rem;
-        border-top-left-radius: 3rem;
+        border-top-right-radius: 2rem;
+        border-top-left-radius: 2rem;
+        overflow: hidden;
 
-        transform: translateY(0100%);
+        transform: translateY(100%);
         transition: transform .3s ease 0s;
+    }
+
+    & .form {
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 3rem 1fr 3rem;
+
+        &__name {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 0;
+            height: 0;
+        }
+
+        &__title {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            background-color: #fff;
+
+            & h2 {
+                font-size: 1.1rem;
+            }
+        }
+
+        &__ingredients {
+            width: 100%;
+            height: 100%;
+            padding: .5rem 0 2rem 0;
+        }
+
+        &__ingredient {
+            &-el {
+                display: flex;
+                align-items: center;
+                padding: .5rem 0;
+            }
+
+            &-chec {
+                width: 1.4rem;
+                height: 1.4rem;
+                border: .05rem solid #ccc;
+                background-color: #fff;
+                border-radius: 50%;
+                margin-right: .5rem;
+                transition: all .2s ease 0s;
+
+                &.active {
+                    border: .4rem solid #fff;
+                    background-color: #000;
+                }
+            }
+        }
+
+        &__btn {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &-submit {
+                width: auto;
+                flex: 0 0 auto;
+                height: 100%;
+                padding: 0 2rem;
+                border-radius: 5rem;
+                color: #000;
+                border: 1px solid #000;
+                background-color: #fff;
+            }
+        }
     }
 }
