--- a/styles/settings/_z-index.scss
+++ b/styles/settings/_z-index.scss
@@ -3,5 +3,25 @@
 }
 
 .app-touch-form {
-    z-index: 100;
+    z-index: 1000;
+
+    &__close {
+        z-index: 1001;
+    }
+
+    &__wrap-form {
+        z-index: 1002;
+    }
+
+    & .form {
+        z-index: 1003;
+
+        &__name {
+            z-index: 1004;
+        }
+
+        &__title {
+            z-index: 1005;
+        }
+    }
 }
