--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -11,6 +11,11 @@
     visibility: hidden;
     transition: all .3s ease 0s;
 
+    &.active {
+        opacity: 1;
+        visibility: visible;
+    }
+
     &__close {
         position: absolute;
         top: 0;
@@ -42,6 +47,10 @@
 
         transform: translateY(100%);
         transition: transform .3s ease 0s;
+
+        &.active {
+            transform: none;
+        }
     }
 
     & .form {
@@ -53,7 +62,8 @@
         grid-template-columns: 1fr;
         grid-template-rows: 3rem 1fr 3rem;
 
-        &__name {
+        &__name-submit,
+        &__ingredients-submit {
             position: absolute;
             top: 0;
             left: 0;
@@ -82,10 +92,20 @@
         }
 
         &__ingredient {
+
             &-el {
                 display: flex;
                 align-items: center;
                 padding: .5rem 0;
+
+                &.active .form__ingredient-chec {
+                    border: .4rem solid #fff;
+                    background-color: #000;
+                }
+
+                &.nothing {
+                    margin-top: 1rem;
+                }
             }
 
             &-chec {
@@ -96,11 +116,6 @@
                 border-radius: 50%;
                 margin-right: .5rem;
                 transition: all .2s ease 0s;
-
-                &.active {
-                    border: .4rem solid #fff;
-                    background-color: #000;
-                }
             }
         }
 
