--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -9,12 +9,11 @@
 
     &__scroll {
         position: relative;
-        width: 100%;
+        width: 120%;
         height: 100%;
         overflow-y: auto;
         overflow-x: hidden;
-        // display: flex;
-        // flex-direction: column;
+        padding-right: 20%;
     }
 
     &__section {
@@ -28,11 +27,13 @@
             flex-direction: column;
             justify-content: flex-end;
             z-index: 1;
+
+            display: none;
         }
 
         &_goods {
             width: 100%;
-            padding: 1rem;
+            padding: 2rem 1rem 1rem 1rem;
         }
     }
 
@@ -47,7 +48,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        // background-attachment: fixed;
+        background-attachment: fixed;
         z-index: 2;
     }
 
@@ -60,6 +61,7 @@
         z-index: 3;
         overflow: hidden;
         padding: 2rem;
+        font-family: 'Yeseva One', cursive;
     }
 
     &__goods {}
@@ -69,14 +71,21 @@
         &__see-all {
             display: flex;
             justify-content: flex-end;
+            padding-top: 1rem;
 
+            & span {
+                font-size: 0.8rem;
+                text-transform: uppercase;
+                font-weight: 700;
+                color: #999;
+            }
         }
 
         &__wrap-scroll {
             margin: 0 -1rem;
-            overflow: hidden;
+            // overflow: hidden;
             height: 32rem;
-            padding: 1rem 0;
+            padding-top: 1rem;
         }
 
         &__scroll {
@@ -84,21 +93,20 @@
             flex-wrap: nowrap;
             overflow-y: hidden;
             overflow-x: auto;
-            height: 37rem;
+            height: 40rem;
             padding: 0 1rem;
+            // border: 1px solid green;
 
 
 
             & .good {
-                width: 18rem;
-                flex: 0 0 18rem;
-                height: 30rem;
-                margin-right: 1rem;
-                box-shadow: 0 .05rem .1rem #ccc;
-                overflow: hidden;
-                border-radius: 1rem;
+                width: 15.7rem;
+                flex: 0 0 15.7rem;
+                min-height: 10px;
+                margin-right: .5rem;
                 position: relative;
                 z-index: 10;
+                // border: 1px solid red;
 
                 &:last-of-type {
                     margin-right: 0;
@@ -106,22 +114,17 @@
 
                 &__content {
                     width: 100%;
-                    height: 100%;
-                    display: grid;
-                    grid-template-columns: 1fr;
-                    grid-template-rows: 1fr 4.75rem;
-                    overflow: hidden;
                 }
 
                 &__wrap-img {
                     width: 100%;
+                    height: 21.7rem;
                     overflow: hidden;
                     position: relative;
                     z-index: 1;
-                }
-
-                &__wrap-text {
-                    position: relative;
+                    border-radius: 1rem;
+                    overflow: hidden;
+                    // border: 1px solid blue;
                 }
 
                 &__img {
@@ -140,14 +143,23 @@
                     bottom: 1rem;
                     z-index: 3;
                     color: #fff;
-                    font-family: 'Inter', serif;
+                }
+
+                &__wrap-text {
+                    width: 100%;
+                    // height: 6rem;
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    // border: 1px solid red;
                 }
 
                 &__name {
-                    font-size: 1rem;
-                    line-height: 1.4;
-                    padding: 1rem;
-                    font-family: 'Inter', serif;
+                    font-size: .9rem;
+                    margin-top: 1rem;
+                    font-weight: 500;
+                    // border: 1px solid red;
                 }
             }
         }
